2010-06-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/mount.c: Fixed string assignment in mount entry
	allocation.

2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/keycreate.c, posix/src/killinfo.c: Remove more ITRON
	references.

2010-06-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1581/cpukit
	* libcsupport/include/rtems/malloc.h, sapi/include/confdefs.h: Remove
	extra * on function pointer declaration.

2010-06-21	Peter Dufault <dufault@hda.com>

	PR 1570/cpukit
	* posix/src/semtimedwait.c: This routine is supposed to return -1/errno
	NOT the status directly.

2010-06-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1554/cpukit
	Coverity Id 17
	* libi2c/libi2c.c, score/src/objectextendinformation.c: Fix memory leak
	on error.

2010-06-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1559/misc
	Coverity Id 16
	* libmisc/monitor/mon-editor.c: Fix buffer overflow.

2010-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: Add parameters for FIFOs and pipes since
	they are distinct to the user.

2010-06-19	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sapi/include/confdefs.h: Add CONFIGURE_MAXIMUM_FIFOS to account for
	resources per FIFO instance.

2010-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/rtems/mkrootfs.h: doxygen cosmetics.
	* libnetworking/netinet/if_ether.c: Misc. 64bit fixes from FreeBSD.
	* libfs/src/nfsclient/src/rpcio.c: Misc. 64bit fixes.

2010-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/include/rtems/rtems/object.h: Remove OBJECTS_ITRON_API.
	* rtems/src/rtemsobjectidapimaximum.c: Remove OBJECTS_ITRON_API.
	* score/include/rtems/score/object.h: Remove OBJECTS_ITRON_API.
	* score/include/rtems/score/thread.h: Remove ITRON.
	* score/include/rtems/score/interr.h: Remove ITRON.
	* rtems/mainpage.h: Remove comment referring to ITRON.
	* rtems/src/rtemsobjectgetapiname.c: Remove ITRON.
	* sapi/include/rtems/config.h: Remove ITRON.